test/resources/parser/failing/IntError1.grading.amy
object IntError 
  def foo(): Int := 42 end foo
end IntError